<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:visibility="visible"
        android:background="@drawable/main_back">

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardBackgroundColor="@color/transparent"
            app:cardCornerRadius="5dp"
            app:contentPadding="0dp"
            app:cardElevation="8dp"
            android:id="@+id/cardView2"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/search_black"
                    android:id="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/imageView"
                    android:hint="@string/anything_to_search"
                    android:singleLine="true"
                    app:layout_constraintBottom_toBottomOf="@+id/imageView"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="serif"
                    android:typeface="serif"
                    android:importantForAutofill="no"
                    android:textSize="25sp"
                    android:layout_marginTop="8dp"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:listitem="@layout/recycler_view_item"
                    android:id="@+id/recycler_view"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cardView"
            app:cardBackgroundColor="@color/transparent"
            app:cardElevation="5dp"
            app:cardCornerRadius="5dp"
            app:contentPadding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical">

            <Button
                    android:text="@string/qin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btm_button_qin"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textSize="30sp"
                    android:fontFamily="@font/kaishu"/>

            <Button
                    android:text="@string/qi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btm_button_qi"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textSize="30sp"
                    android:fontFamily="@font/kaishu"/>

            <Button
                    android:text="@string/shu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btm_button_shu"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textSize="30sp"
                    android:fontFamily="@font/kaishu"/>

            <Button
                    android:text="@string/hua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btm_button_hua"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:textSize="30sp"
                    android:fontFamily="@font/kaishu"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
